# stt_free

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: process.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sttfree/collector/: GitRepoSync.kt  MainActivity.kt  RecordingFile.kt  RecordingScanner.kt  SettingsActivity.kt  SettingsStore.kt  SyncManager.kt  SyncScheduler.kt  SyncWorker.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: strings.xml  themes.xml
phone/: auto_push.sh
pipeline/: analyze.py  config.yaml  onepager.py  run.py  stt.py
