[project]
name = "stt-free"
version = "0.1.0"
description = "Android 음성 녹음 -> STT -> AI 요약 -> 1페이지 시각화 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "pyyaml>=6.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30.0"]
gemini = ["google-generativeai>=0.5"]
ollama = ["ollama>=0.2"]

[tool.uv]
package = false
